[gd_scene load_steps=5 format=2]

[ext_resource path="res://Items/Cherry.png" type="Texture" id=1]
[ext_resource path="res://Cherry.gd" type="Script" id=2]
[ext_resource path="res://Scripts/NukeRadius.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 17.6514

[node name="Cherry" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Detonator" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="SeedTrigger" type="CollisionPolygon2D" parent="Detonator"]
polygon = PoolVector2Array( 4.29472, 0.000370026, 0.341354, -1.05757, -4.05746, 0.501501, -3.77905, 4.51055, 3.96063, 4.51055 )

[node name="Detonator2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="SeedTrigger" type="CollisionPolygon2D" parent="Detonator2"]
polygon = PoolVector2Array( 4.29472, 0.000370026, 0.341354, -1.05757, -4.05746, 0.501501, -3.77905, 4.51055, 3.96063, 4.51055 )

[node name="SeedCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 4 )

[node name="SeedShape" type="CollisionShape2D" parent="SeedCollision"]
position = Vector2( -0.315336, 0.578116 )
shape = SubResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 3.68222, 0.779907, 0.0629482, -0.556442, -3.27792, 0.779907, -2.88815, 3.78669, 3.01405, 3.89805 )

[connection signal="body_entered" from="Detonator" to="." method="_on_Detonator_body_entered"]
[connection signal="area_entered" from="Detonator2" to="." method="_on_Detonator2_area_entered"]
